Launch 4K firmware mislabeled

--- a/4k.md
+++ b/4k.md
@@ -39,5 +39,4 @@ SHA-256: `c01ce663845095aaef44f8cb7c410d4fb2dfb0d821d52b542bb05abf8464f63c`
 CRC-32: `401028EC`  
 SHA-256: `21651f1a2530494a778f0ce756d7648fbf8d8bfb36241d8d088028d6100866d1`
 
-- Original launch firmware, only provided as a full SD card image that includes all launch profiles and other data.
-- Unzip onto a freshly FAT32 formatted SD Card.
+- Original launch firmware
