--- a/4k.md
+++ b/4k.md
@@ -35,7 +35,7 @@ SHA-256: `c01ce663845095aaef44f8cb7c410d4fb2dfb0d821d52b542bb05abf8464f63c`
 
 ## Version 1.0 RC26 (2023-12-09)
 
-### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmwares@main/RetroTINK-4K/Release/1.0%20RC26/Rt4k_10rc26.zip)
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmwares@main/RetroTINK-4K/Release/Rt4k_10rc26.zip)
 CRC-32: `401028EC`  
 SHA-256: `21651f1a2530494a778f0ce756d7648fbf8d8bfb36241d8d088028d6100866d1`
 
