Added instructions to 5X pages

--- a/5x.md
+++ b/5x.md
@@ -3,3 +3,39 @@ layout: default
 ---
 
 <h1 align="center" style="margin-top: 0px;">⚠️ CURRENTLY UNDER CONSTRUCTION ⚠️</h1>
+
+<h1 align="center" style="margin-top: 0px;">RetroTINK-5X firmware</h1>
+
+<br />
+
+<h2 align="center" style="margin-top: 0px;">⚠️ CAUTION: Read carefully before proceeding ⚠️</h2>
+
+### Warning: Only update your device using the tools provided below. Attempts at any other method will result in non-warranty device failure.
+
+## Instructions️
+
+### Windows
+
+1. Download the [FTDI D2XX Drivers](https://ftdichip.com/wp-content/uploads/2021/08/CDM212364_Setup.zip) and install.
+2. Download the [RetroTINK Firmware update tool](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK%20FW%20Tool.zip) and install by unzipping and running RT_FWUP.
+3. Download the appropriate HEX file for the desired version from the list below.
+4. Plug your device into your computer's USB port while holding down the 'Menu' button. The LED should be RED indicating update mode.
+5. Run the RetroTINK Firmware Update tool. The installer will have left a shortcut on your desktop.
+6. Hit 'Search'. You should see 'FT232R USB UART' appear in the box.
+7. Hit 'Load HEX' and point to the .hex file you downloaded.
+8. Hit 'Flash'. The update process should start. If the window freezes, that is okay - the update should complete after a minute or two. Just be patient.
+9. Your device should reboot and be ready to use.
+10. If you accidentally interrupt the process, just start over from step 4. 
+
+### Multiplatform
+
+A talented developer (Ryan Mullen) ported the firmware update tool to Python: https://github.com/rmull/tinkup
+
+This should work on Windows, Mac (including M1) and Linux.
+
+### Video
+
+Big thanks to [RetroRGB](https://www.retrorgb.com/how-to-update-your-retrotinks-firmware.html) who was kind and generous enough to put this video together. **Please do not contact him for technical support.**
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Bva0JXLoq7E?si=Eobt-HF3LD1Lo89_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<br/>
