RT5X stable firmware changelog headers

--- a/5x.md
+++ b/5x.md
@@ -41,3 +41,49 @@ Big thanks to [RetroRGB](https://www.retrorgb.com/how-to-update-your-retrotinks-
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Bva0JXLoq7E?si=Eobt-HF3LD1Lo89_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br/>
+
+## Version 3.71 (2023-10-09)
+
+## Version 3.7 (2023-09-08)
+
+## Version 3.0 (2022-12-23)
+
+## Version 2.77 (2022-09-26)
+
+## Version 2.76 (2022-08-07)
+
+## Version 2.75 (2022-08-02)
+
+## Version 2.74 (2022-07-30)
+
+## Version 2.73 (2022-07-11)
+
+## Version 2.71 (2022-04-19)
+
+## Version 2.39 - Special Holiday Edition! (2021-12-21)
+
+## Previous Version Archive
+
+## Version 1.999 (2021-11-05)
+
+## Version 1.99 (2021-10-11)
+
+## Version 1.98 (2021-10-10)
+
+## Version 1.84 (2021-09-21)
+
+## Version 1.77 (2021-09-09)
+
+## Version 1.74 (2021-09-04)
+
+## Version 1.67 (2021-08-06)
+
+## Version 1.55 (2021-07-20)
+
+## Version 1.29 (2021-06-17)
+
+## Version 1.28 (2021-06-15)
+
+## Version 1.24 (2021-06-05)
+
+## Version 1.2 (2021-05-26)
