Added missing changelog headers to 4X pages

--- a/4k.md
+++ b/4k.md
@@ -23,6 +23,7 @@ layout: default
 CRC-32: `BEB27659`  
 SHA-256: `c01ce663845095aaef44f8cb7c410d4fb2dfb0d821d52b542bb05abf8464f63c`
 
+### Changelog:
 - Added MiSTer DV1 support for auto-decimating and auto-cropping video output from cores
 - Enabled Auto-Cropping for HDMI® input sources
 - Scanlines and masks are automatically rotated correctly when the video is rotated
@@ -39,4 +40,5 @@ SHA-256: `c01ce663845095aaef44f8cb7c410d4fb2dfb0d821d52b542bb05abf8464f63c`
 CRC-32: `401028EC`  
 SHA-256: `21651f1a2530494a778f0ce756d7648fbf8d8bfb36241d8d088028d6100866d1`
 
+### Changelog:
 - Original launch firmware
