Added RT5X changelog skeleton

--- a/5x.md
+++ b/5x.md
@@ -43,49 +43,181 @@ Big thanks to [RetroRGB](https://www.retrorgb.com/how-to-update-your-retrotinks-
 <br/>
 
 ## Version 3.71 (2023-10-09)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 3.7 (2023-09-08)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 3.0 (2022-12-23)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 2.77 (2022-09-26)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 2.76 (2022-08-07)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 2.75 (2022-08-02)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 2.74 (2022-07-30)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 2.73 (2022-07-11)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 2.71 (2022-04-19)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 2.39 - Special Holiday Edition! (2021-12-21)
 
 <br/>
 
 # Previous Version Archive
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.999 (2021-11-05)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.99 (2021-10-11)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.98 (2021-10-10)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.84 (2021-09-21)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.77 (2021-09-09)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.74 (2021-09-04)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.67 (2021-08-06)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.55 (2021-07-20)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.29 (2021-06-17)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.28 (2021-06-15)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.24 (2021-06-05)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 ## Version 1.2 (2021-05-26)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
