5X 2.39 skeleton was missing

--- a/5x.md
+++ b/5x.md
@@ -115,6 +115,12 @@ SHA-256: `PLACEHOLDER`
 - PLACEHOLDER
 
 ## Version 2.39 - Special Holiday Edition! (2021-12-21)
+### Download link to be added
+CRC-32: `PLACEHOLDER`  
+SHA-256: `PLACEHOLDER`
+
+### Changelog:
+- PLACEHOLDER
 
 <br/>
 
