Added RT5X stable changelogs

--- a/5x.md
+++ b/5x.md
@@ -14,6 +14,8 @@ layout: default
 
 ### Warning: Only update your device using the tools provided below. Attempts at any other method will result in non-warranty device failure.
 
+### Notice: Firmware updates erase saved profiles and reset the device to default settings.
+
 ## Instructions️
 
 ### Windows
@@ -48,7 +50,7 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- DRAM controller bug fixed that glitched high resolution sources.
 
 ## Version 3.7 (2023-09-08)
 ### Download link to be added
@@ -56,7 +58,12 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Support for upgraded remote control. Note: the new remote is NOT mandatory. The old remote works fine.
+- Precise ADC gain controls to adjust the Y, Pb and Pr analog gain and offset to obtain near perfect video levels.
+- ADC gain and SDP contrast/brightness adjustments are now aided by real-time visual indicators of clipping at the bottom and top ranges.
+- TBC mode added (for all Gen Lock capable units). TBC is similar to Gen Lock but with additional filtering intended for use with unstable sources like VHS.
+- Inverse telecine deinterlacing modes for 3:2 and 2:2 material. 3:2 is useful for 24 fps movies and 2:2 is useful for interlaced games that run at reliable/stable 30 fps. Under these conditions, the deinterlacing is perfect.
+- Various bug fixes and optimizations.
 
 ## Version 3.0 (2022-12-23)
 ### Download link to be added
@@ -64,7 +71,15 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Profiles can be named with an on-screen keyboard.
+- Ported RT4K buffer mode, making all resolutions 'min-lag'.
+- Current buffer lag (assuming Frame Lock or converged Gen Lock) can be seen in the [Status] page.
+- Ported RT4K Gen Lock, improving overall stability.
+- 240p output mode revived (for 240p, 480i, 480p and 720p inputs).
+- 480i output mode added (for 240p, 480i, 480p and 720p inputs).
+- Downscaler behavior can be controlled in the [Interp./Deint.] menu. DS Pass-Thru = No, forces all sources to the specified output (i.e. 480i is converted to 240p). DS Pass-Thru = Yes has the output resolution follow the input resolution.
+- Please be aware, that downscaling options are considered experimental and unsupported. We cannot provide support or guarantee proper operation with 3rd party HDMI -> analog dongles. You will need a converter that is capable of recognizing and generating the correct sync signals for 480i video.
+- 4K24 and 1080p Min-Lag modes removed.
 
 ## Version 2.77 (2022-09-26)
 ### Download link to be added
@@ -72,7 +87,8 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Added "Freesync" VRR insertion to the HDMI menu.
+- Adjusted composite video decoder to minimize curling for composite NES games (see top score text in Castlevania I as an example).
 
 ## Version 2.76 (2022-08-07)
 ### Download link to be added
@@ -80,7 +96,9 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Added color correction to the 'HDR10' mode to better match the BT.2020 gamut.
+- Recommend the use of HDR10 over HLG.
+- Reminder: HDR modes are for fun and to be used with scanlines.
 
 ## Version 2.75 (2022-08-02)
 ### Download link to be added
@@ -88,7 +106,8 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Added 'HLG' option to the HDR injection
+- Fixed bug where HDR does not get reapplied if HDMI cord is disconnected.
 
 ## Version 2.74 (2022-07-30)
 ### Download link to be added
@@ -96,7 +115,9 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Added 'Inject HDR' option into HDMI menu. This flags the video as HDR10 to expose HDR related settings on compatible TVs.
+- HDR mode requires gamma to be increased, while color saturation to be decreased in the Post-Processing menu.
+- General improvements in timing closure on the FPGA.
 
 ## Version 2.73 (2022-07-11)
 ### Download link to be added
@@ -104,7 +125,8 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Added 'Gen Lock' in addition to Triple Buffer and Frame Lock. This allows the RT5X to match the input frame rate with a regenerated clock which is more stable than Frame Lock. Mainly useful for 1440p+ resolutions with SDP sources (composite/S-video) that previously could not sync in Frame Lock.
+- Compatible with all units sold after July 2021 (the majority of 5X's in the field).
 
 ## Version 2.71 (2022-04-19)
 ### Download link to be added
@@ -112,7 +134,24 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Advanced resolutions: 1440p, 4K24, 1536p are hidden by default. Go to [OSD] -> Advanced Res option to enable them.
+- New experimental high resolution modes added:
+  - 2560 x 1440 wide screen 1440p for broader compatibility with TVs that will not accept 1920 x 1440.
+  - 2048 x 1536 ("iPad").
+  - 4K24 (for 60 Hz sources) and 4K25 (for 50 Hz) sources. Frame lock on for 60 Hz sources changes to 4K30.
+  - **These modes are considered experimental and provided without support or guarantees.**
+- New 1080p (Min-Lag) mode operates the RT5X as a line doubler to achieve ~1 ms when frame lock is turned on for 240p, 480i and 480p sources.
+- 720p source can be scaled to 1920 x 1440 or 2560 x 1440.
+- 240p and 540p modes have been removed to save space.
+- "Pre-scaler" option in the [Interp./Deint.] menu to convert 480p and 720p sources to 240p, before re-upscaling.
+- Optimal timings re-enabled for composite and S-video sources.
+- Option to enable optimal timings for interlaced sources.
+- Hi-Res 512 and 858 optimal timing modes added.
+- "Pre-emph" filter now goes down to -5.
+- Option to load profile on power up in the [OSD] -> Startup Profile option.
+- Press and hold remote control button to keep incrementing/decrementing option.
+- Press "back" button 6 times rapidly to load default profile.
+- Variety of bug and crop fixes.
 
 ## Version 2.39 - Special Holiday Edition! (2021-12-21)
 ### Download link to be added
@@ -120,17 +159,26 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+First of all, thank you so much everyone for making the RetroTINK-5X a reality. I could not have imagined the interest and growth that this project has experienced over the past year. This was all possible only due to the tremendous support from the community.
+
+To show our appreciation, we wanted to make this holiday season update extra special. The entire system has been re-written with a full menu system to support new options and features plus free-scaling, CRT effects and an improved polyphase scaling engine!
+
+There's a lot to digest and the manual needs to be completely re-written, which will take some time. For now, check out this stream with RetroRGB where we go over everything, which will serve as a handy video tutorial and reference.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e6GFw-6ypLM?si=P_xcT9oujXlFfXSn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+We hope that this will give you many more hours of enjoyment. It's been a true honor and pleasure creating this for you.
+
+Quick notes:
+- The menu system relies on the remote. The Top Left button calls up the OSD. Use the arrow keys to navigate/toggle through settings. Use the OK button to select an option. The Back button exits the OSD.
+- The remote overlays should largely be compatible. When the OSD is off, each button serves as a direct short cut to the corresponding page in the menu.
+- The system always powers on to the default profile as a safety measure.
+- Right now, re-flashing the firmware will erase your profiles, so please be careful.
+- The input source can be directly cycled using the physical 'Input' button on the device as a fail safe in case the remote is inoperative.
 
 <br/>
 
 # Previous Version Archive
-### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
-
-### Changelog:
-- PLACEHOLDER
 
 ## Version 1.999 (2021-11-05)
 ### Download link to be added
@@ -138,7 +186,7 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Fixed glitch in some scanline modes.
 
 ## Version 1.99 (2021-10-11)
 ### Download link to be added
@@ -146,7 +194,8 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Fixed (minor) blue channel interpolation error.
+- Fixed clamping error.
 
 ## Version 1.98 (2021-10-10)
 ### Download link to be added
@@ -154,7 +203,31 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Fixed "Green Push" bug in 240p/480i modes introduced in the last version.
+- Fixed aspect ratio bug that in 720p -> 240p downscaling in 4:3 mode.
+- Fixed bug that caused a slight vertical shift when engaging scanline mode.
+- Separated auto-phase thresholds for 240p/480p/360p for more reliable operation.
+- HDMI aspect ratio flag is set to "4:3" for 1440p output to improve compatibility with TVs that do not provide manual controls.
+- PAL "stretch" modes now implemented for composite and S-video inputs, bringing them in line with the RGB and YPbPr modes.
+- The "16:9" mode for 1200p with a 480p input is replaced with a "3:2" mode for use with Dreamcast.
+- 480p sources now have three sampling modes: DTV-A, DTV-B, Generic 4:3 and Generic 16:9. 
+- Enhanced Auto-Phase control and regeneration algorithm for "4:4:4" output quality with DTV-A and DTV-B modes with component video inputs.
+  - The new, enhanced DTV "4:4:4" re-sampler may take a few seconds to analyze and converge to the optimal settings.
+  - Most setups will look best with DTV-A. If something looks off, use DTV-B as a fallback.
+  - PS2 looks best with the EDTV LPF off.
+  - Xbox, due to video noise, appears to work best with EDTV LPF on.
+  - You can use any combination of settings for GCN and Wii, due to their native 4:2:2 output.
+- New CRT effects with improved mask generation engine:
+  - Slot Mask - resembles a high resolution slot mask CRT, replacing the old version which was too coarse.
+  - Aperture Grille: Same as before
+  - Aperture Grille 2: Equivalent to the old "PVM" mode
+  - PVM 600 TVL: A finer grille with highlights to mimic a mid-range PVM
+  - FV310: A coarser grille with highlights to mimic a consumer Trinitron
+  - Consumer 1: Coarse slot mask with no visible scanlines mimicking a low-resolution consumer tube
+  - Consumer 2: Coarse slot mask of a different pattern with a slight scanline effect
+  - Note: The "80's CRT mode" would be equivalent to Consumer 1, Pre-Emph -3, Notch Filter with a composite source.
+
+A friendly reminder due to concerns about too many adjustments and settings as improvements/features are implemented: You can always use the RT5X with default settings (1080pFill/Generic) and get an experience that is arguably at least 90% as good if you never want to deal with any of this.
 
 ## Version 1.84 (2021-09-21)
 ### Download link to be added
@@ -162,7 +235,16 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Reworked 50 Hz 1080p modes for RGB/YPbPr inputs:
+  - 1080p (Fill) is a 4x (288p) or 2x (576i) integer scale to 1152p with a tiny amount of vertical overscan cropping.
+  - 1080p (Over) adds an vertical stretch of ~20% to undo "lazy" PAL ports that place 240p/480i artwork in a 288p/576i frame.
+  - 1080p (Under) scales the 288p/576i content to exactly 1080p
+  - Use the "Up" and "Down" buttons to center the image vertically as needed.
+- Optimal timings now available for 50 Hz RGB/YPbPr inputs: 
+  - Only enabled for 1080p (Fill) and 1080p (Over) output modes.
+  - Highly experimental.
+- Fixed some minor GBI mode bugs.
+- Enhanced auto-phase algorithm to avoid false locks on black screens.
 
 ## Version 1.77 (2021-09-09)
 ### Download link to be added
@@ -170,7 +252,14 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Reverted AG scanline option to previous mask width
+- Enhanced gamma and saturation compensation for all scanline modes
+- EDTV LPF is a separate setting from SDTV modes
+  - I generally recommend leaving the EDTV LFP to 'off' for the sharpest image in DTV 858 optimal sampling/auto-phase. Only turn it on if you see noise/jailbars.
+- Fixed screen tear bug in 480p -> 1080p (Under)
+- Fixed vertical hold (rolling screen) glitch for odd NTSC and PAL systems that uses non-standard sync lengths (mostly old home computers and PAL Atari Jaguar).
+
+Reminder: Both CRT effects and Smoothing filters look best in 'Generic' mode. Optionally set the pre-emphasis filter to -1 for a softer effect.
 
 ## Version 1.74 (2021-09-04)
 ### Download link to be added
@@ -178,7 +267,15 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Added 'Smoothing Filter'
+  - Enable by cycling into the 'Interpolation' menu (Vol+ button on remote).
+  - Current algorithm works best on 480p 3D content (i.e. Xbox, GCN games). Lower resolution content might be too rough.
+  - Smoothing filter is also used to enhance the performance of the Motion Adaptive Deinterlacer, although the effect is subtle.
+- Reverted some settings that might have caused instability with SNES and other consoles. For difficult systems, like the SMS and NEOGEO AES use the 'Strong' LPF setting. For all other systems use 'Off', 'Light' or 'Medium'.
+- LPF for 480p sources automatically engaged for all LPF settings except the 'Off' position.
+- 'Aperture Grille' setting now uses a coarser mask than 'PVM'. Previous setting was too similar.
+- Added mild Gamma boost to the scanline settings to overcome brightness loss.
+- Fixed a variety of cropping issues in various NTSC and PAL video modes.
 
 ## Version 1.67 (2021-08-06)
 ### Download link to be added
@@ -186,7 +283,14 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Added new scanline and CRT effects.
+  - Intensity modulation (25%, 50%, 75%): Variant of polyphase scanlines where the width of the "beam" is proportional to brightness, mimicking a CRT. At 50%, this mode has a similar visual characteristic to a 800-900 TVL BVM.
+  - Slot Mask, Aperture Grille, PVM: Adds vertical lines to mimic a CRT's mask. Slot mask attempts to recreate an arcade CRT. Aperture Grille attempts to recreate a consumer Trinitron. PVM attempts to recreate a 600 TVL professional monitor.
+  - Due to the high amount of fine detail in the slot mask mode, I recommend using the 1440p output mode.
+  - Simulated scanlines work by artificially darkening the picture. Normally, I am strongly against modifying your TV's picture controls beyond strict "neutral", but in this case, try adjusting your TV's various brightness/backlight controls as well as activating advanced processing like "dynamic contrast". I've found that they can be helpful at compensating for the lost intensity.
+- Added "Pre-emphasis Filter" to soften or sharpen the image. The default value of "0" adds no processing. Negative values blur the image, and can be a good match with the CRT effects to create a soft look. Positive values sharpen the image and can be helpful with systems like the 2/3-Chip SNES.
+- PS1 320 optimal sampling is now a separate setting from Genesis since the timings differ enough to cause artifacts.
+- Added 540p output for use with HD-CRTs.
 
 ## Version 1.55 (2021-07-20)
 ### Download link to be added
@@ -194,7 +298,13 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Some optimal modes are capable of outputting "444" chroma sampling (thanks to Extrems for the idea):
+![image-title-here](/assets/5x_155_444.png){:class="img-responsive"}
+- Note: Generic modes are unaffected either way since they do not contain sharp color transitions.
+- Added LCD overlay effect to the "Scanline" menu. For this to work:
+  - The H. Sampling must be in an optimal mode.
+  - The output mode must be using an integer vertical scaling factor.
+- Tuned auto-phase algorithm - initial detection of correct phase will take longer but it should eliminate random hunting.
 
 ## Version 1.29 (2021-06-17)
 ### Download link to be added
@@ -202,7 +312,10 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Fixed some alignment problems in GBI 360p mode.
+- Added "240p" style scanlines to GBI content.
+- Fixed YPbPr detection glitch in version 1.28.
+- Cleaned up 480p cropping.
 
 ## Version 1.28 (2021-06-15)
 ### Download link to be added
@@ -210,7 +323,17 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- Added 360p support for the GBI. Possible output resolutions:
+  - 1080p (FILL): 6x integer scale with optimal sampling/autophase
+  - 1080p (OVER): 6.75 interpolated scaling to use the full vertical height of the display
+  - 1200p: 7x integer scale with optimal timing/autophase
+  - 1440p: 8x integer scale with optimal sampling/autophase
+
+Grumpy disclaimer time! It's up to you to get GBI and 360p output from your Gamecube setup! We cannot provide support for the use of 3rd party equipment and there are simply too many variations for us to be able to keep up with. 
+
+We can confirm that a PAL GCN with a RGB SCART cable (use one designed for PAL consoles NOT NTSC) works as well as the official OEM component cables and the Insurrection Industries Carby with an external HDMI -> YPbPr converter box. The RGB approach seems to have some image quality issues, though, so we'd recommend a solution that uses the GC's digital AV port.
+
+Unfortunately the Carby Component Cable does not work. The HD Retrovision on a PAL GCN also does not work. We do not know if a modded GCN works, but are told that it should.
 
 ## Version 1.24 (2021-06-05)
 ### Download link to be added
@@ -218,7 +341,10 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- SDTV LPF has now four settings: Off/Light/Medium/Strong.
+- DTV 858 Optimal Sampling for 480p sources is now enabled for 1440p output modes. Please set your display to "16:9" for the correct final aspect ratio.
+- Scanline generator now has 25%, 50%, 80% and 100% (integer) modes.
+- 480p style scanlines can be applied to de-interlaced 480i content.
 
 ## Version 1.2 (2021-05-26)
 ### Download link to be added
@@ -226,4 +352,18 @@ CRC-32: `PLACEHOLDER`
 SHA-256: `PLACEHOLDER`
 
 ### Changelog:
-- PLACEHOLDER
+- 480p sources (4:3 aspect only) now use automatic optimal sampling/phase (858 pixel DTV) when the output resolution is 1080p (FILL), 1080p (UNDER) and 480p. This brings pixel perfect sampling to 480p games on DC, PS2, XBOX and GCN. When active, the 'Generic 4:3' is replaced with 'DTV 858' under the 'H. Sampling' Menu.
+- Improved standard definition LPF to reduce noise without compromising sharpness.
+- Fixed chroma offset error resulting in 1-2-pixel wide color shifts (big thanks to Fudoh).
+- Fixed incorrect aspect ratio flag that caused 4:3 squeeze on 1080p modes.
+- Fixed 720p gain control error that caused variable brightness.
+- Fixed scanline generator bug that caused false colors on bright scenes.
+- Fixed 720p stability issues in pass-thru and down scaling.
+- Fixed some sync problems:
+  - Fixed NEOGEO sync for AES and MVS-1F consoles. Activate fix by entering NEOGEO optimal timing mode.
+  - SMS should be stable now as long as the 'LPF' is enabled.
+  - Both fixes seem to be most reliable with HDRV cables. You might need to cycle back to the NEOGEO mode in some cases. For frequent NEOGEO users, I would still recommend a MVS-1C based system.
+- Added 576p and 1440p output modes to 288p/576i/576p sources.
+- Improved 'no-signal' detection to prevent glitched output when source is removed.
+- Minimized glitched image during resolution changes.
+- General improvements in clock stability.
