Made erase notice on 5X page more prominent

--- a/5x.md
+++ b/5x.md
@@ -14,7 +14,7 @@ layout: default
 
 ### Warning: Only update your device using the tools provided below. Attempts at any other method will result in non-warranty device failure.
 
-### Notice: Firmware updates erase saved profiles and reset the device to default settings.
+## Notice: Firmware updates erase saved profiles and reset the device to default settings.
 
 ## Instructions️
 
