Instructions padding fix

--- a/4k.md
+++ b/4k.md
@@ -10,6 +10,8 @@ layout: default
 
 ### For the initial update from the launch 1.0 RC26 firmware, it is recommended to update using the reset button method rather than through the menu.
 
+<p style="margin:20px;"></p>
+
 ## Instructions️
 
 1. Download the appropriate zip file for the desired version.
