--- a/5x.md
+++ b/5x.md
@@ -16,6 +16,8 @@ layout: default
 
 ## Notice: Firmware updates erase saved profiles and reset the device to default settings.
 
+<p style="margin:20px;"></p>
+
 ## Instructions️
 
 ### Windows
