--- a/5x.md
+++ b/5x.md
@@ -49,8 +49,8 @@ Big thanks to [RetroRGB](https://www.retrorgb.com/how-to-update-your-retrotinks-
 
 ## Version 3.71 (2023-10-09)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `1E42A5D4`  
+SHA-256: `aa70d0414589040ceac9eac4f6a5a59936a38abff39cca01f3b153cc0402bd80`
 
 ### Changelog:
 - DRAM controller bug fixed that glitched high resolution sources.
@@ -59,8 +59,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 3.7 (2023-09-08)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `634473C4`  
+SHA-256: `8bc8cbee2ddb1cd38a5186f0bb150352602e78439d904c98f0e6349a1bd8f49d`
 
 ### Changelog:
 - Support for upgraded remote control. Note: the new remote is NOT mandatory. The old remote works fine.
@@ -74,8 +74,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 3.0 (2022-12-23)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `1FC97375`  
+SHA-256: `a726b175b9e8d8d1abfe96e23834e955009007e4fe749a05ad1dc83f964e5822`
 
 ### Changelog:
 - Profiles can be named with an on-screen keyboard.
@@ -92,8 +92,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 2.77 (2022-09-26)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `B01E84F8`  
+SHA-256: `2e4f39cb0614b6b03739b9f9c932ce690c726b3db8966e7193a7fc96be05ee83`
 
 ### Changelog:
 - Added "Freesync" VRR insertion to the HDMI menu.
@@ -103,8 +103,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 2.76 (2022-08-07)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `AFB5DF46`  
+SHA-256: `04f980d906fa5dace64eb696b194c57589869543f3609a552d15cde78dd14d0a`
 
 ### Changelog:
 - Added color correction to the 'HDR10' mode to better match the BT.2020 gamut.
@@ -115,8 +115,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 2.75 (2022-08-02)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `8AF02841`  
+SHA-256: `dea1fd52ec22dd78a4d2aea60bed8c24d550bb13f911f4823132ad7a15daa982`
 
 ### Changelog:
 - Added 'HLG' option to the HDR injection
@@ -126,8 +126,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 2.74 (2022-07-30)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `BBACD719`  
+SHA-256: `cb14714b25299edc449d64a5742ec49ea26f4bd6c5fcfa24ca7dd9fdb4517946`
 
 ### Changelog:
 - Added 'Inject HDR' option into HDMI menu. This flags the video as HDR10 to expose HDR related settings on compatible TVs.
@@ -138,8 +138,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 2.73 (2022-07-11)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `4058B3C4`  
+SHA-256: `a192d4adafa63eb966192e91178f45a972285d2ace16ccbc151b93e069f4c2d1`
 
 ### Changelog:
 - Added 'Gen Lock' in addition to Triple Buffer and Frame Lock. This allows the RT5X to match the input frame rate with a regenerated clock which is more stable than Frame Lock. Mainly useful for 1440p+ resolutions with SDP sources (composite/S-video) that previously could not sync in Frame Lock.
@@ -149,8 +149,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 2.71 (2022-04-19)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `24B8C06E`  
+SHA-256: `82d6ba26ff51805f9e5cd088fda1181724972e00a8c2f87a6c678ccd03697796`
 
 ### Changelog:
 - Advanced resolutions: 1440p, 4K24, 1536p are hidden by default. Go to [OSD] -> Advanced Res option to enable them.
@@ -176,8 +176,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 2.39 - Special Holiday Edition! (2021-12-21)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `B5199BCB`  
+SHA-256: `b853d4fdd218dc2e92023c88c7a7349a2917be28378b7e7175b61fbb4598a5c7`
 
 ### Changelog:
 First of all, thank you so much everyone for making the RetroTINK-5X a reality. I could not have imagined the interest and growth that this project has experienced over the past year. This was all possible only due to the tremendous support from the community.
@@ -205,8 +205,8 @@ Quick notes:
 
 ## Version 1.999 (2021-11-05)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `D1F670F8`  
+SHA-256: `a4ae1c3892db2344644260d21d4d25fe6c8e91b3dab86a730b39cb7d09dcd1f7`
 
 ### Changelog:
 - Fixed glitch in some scanline modes.
@@ -215,8 +215,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 1.99 (2021-10-11)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `A5A06175`  
+SHA-256: `6e07857a339272cbebff339f3b611adecf3343e0b4b5de45b5088527a48a788e`
 
 ### Changelog:
 - Fixed (minor) blue channel interpolation error.
@@ -226,8 +226,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 1.98 (2021-10-10)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `71FF2D5A`  
+SHA-256: `cf135d4d9d2ad123325e21b5aacc8cbccb62fbd71960b296c5ae3de028ab6516`
 
 ### Changelog:
 - Fixed "Green Push" bug in 240p/480i modes introduced in the last version.
@@ -260,8 +260,8 @@ A friendly reminder due to concerns about too many adjustments and settings as i
 
 ## Version 1.84 (2021-09-21)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `91787D99`  
+SHA-256: `912442b3f5b16d37157ef7eb294a0e61f2dc1efbd2a217f3aa3ce2fa25570b7f`
 
 ### Changelog:
 - Reworked 50 Hz 1080p modes for RGB/YPbPr inputs:
@@ -279,8 +279,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 1.77 (2021-09-09)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `0C82C44C`  
+SHA-256: `bdd9b16ed34056d3bc2054b7cc3565af2f19a044bce411e471259f3177f5116c`
 
 ### Changelog:
 - Reverted AG scanline option to previous mask width
@@ -296,8 +296,8 @@ Reminder: Both CRT effects and Smoothing filters look best in 'Generic' mode. Op
 
 ## Version 1.74 (2021-09-04)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `09F6E254`  
+SHA-256: `497dffb0a2a8a95c4695686d9ce51108da133bf6d882a42fc6b76329d3ccf1a5`
 
 ### Changelog:
 - Added 'Smoothing Filter'
@@ -314,8 +314,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 1.67 (2021-08-06)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `B9003D1B`  
+SHA-256: `daf1ba02caa4be07d4fb4b1fa063c518e5eb144bfd8e26b23b5afc247467ac2d`
 
 ### Changelog:
 - Added new scanline and CRT effects.
@@ -331,8 +331,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 1.55 (2021-07-20)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `FCDA8977`  
+SHA-256: `38cc90fc9cef1f165b4ab87d493fc6aafcbbf2c2db80d58a47bd8998442871dc`
 
 ### Changelog:
 - Some optimal modes are capable of outputting "444" chroma sampling (thanks to Extrems for the idea):
@@ -348,8 +348,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 1.29 (2021-06-17)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `28213800`  
+SHA-256: `9ab8a0f31ae4b92c93f49c4bb92baf82356d228d7ddfd8f52fbcb65f75677de4`
 
 ### Changelog:
 - Fixed some alignment problems in GBI 360p mode.
@@ -361,8 +361,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 1.28 (2021-06-15)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `266BAE8E`  
+SHA-256: `4695f5f000ab5f51075a941bd93e42a821d3e37e236ffc19ae682ef9c612346f`
 
 ### Changelog:
 - Added 360p support for the GBI. Possible output resolutions:
@@ -381,8 +381,8 @@ Unfortunately the Carby Component Cable does not work. The HD Retrovision on a P
 
 ## Version 1.24 (2021-06-05)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `7E40CE5C`  
+SHA-256: `524e96a54e3f4d8515d96f5f8a84945d8af53e81c65b908afdc5ccea170a1cd2`
 
 ### Changelog:
 - SDTV LPF has now four settings: Off/Light/Medium/Strong.
@@ -394,8 +394,8 @@ SHA-256: `PLACEHOLDER`
 
 ## Version 1.2 (2021-05-26)
 ### Download link to be added
-CRC-32: `PLACEHOLDER`  
-SHA-256: `PLACEHOLDER`
+CRC-32: `0CA84F49`  
+SHA-256: `2767829a5db937e9c1e713444a24f6f2ae90c358417edd7e7ea4f08b5f8ecbc6`
 
 ### Changelog:
 - 480p sources (4:3 aspect only) now use automatic optimal sampling/phase (858 pixel DTV) when the output resolution is 1080p (FILL), 1080p (UNDER) and 480p. This brings pixel perfect sampling to 480p games on DC, PS2, XBOX and GCN. When active, the 'Generic 4:3' is replaced with 'DTV 858' under the 'H. Sampling' Menu.
