Mopre 5X padding and spacing fixes

--- a/5x.md
+++ b/5x.md
@@ -188,6 +188,8 @@ There's a lot to digest and the manual needs to be completely re-written, which 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/e6GFw-6ypLM?si=P_xcT9oujXlFfXSn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+<p style="margin:20px;"></p>
+
 We hope that this will give you many more hours of enjoyment. It's been a true honor and pleasure creating this for you.
 
 Quick notes:
@@ -201,7 +203,7 @@ Quick notes:
 
 # Previous Version Archive
 
-<br/>
+<p style="margin:20px;"></p>
 
 ## Version 1.999 (2021-11-05)
 ### Download link to be added
@@ -254,7 +256,7 @@ SHA-256: `cf135d4d9d2ad123325e21b5aacc8cbccb62fbd71960b296c5ae3de028ab6516`
   - Consumer 2: Coarse slot mask of a different pattern with a slight scanline effect
   - Note: The "80's CRT mode" would be equivalent to Consumer 1, Pre-Emph -3, Notch Filter with a composite source.
 
-<br/>
+<p style="margin:20px;"></p>
 
 A friendly reminder due to concerns about too many adjustments and settings as improvements/features are implemented: You can always use the RT5X with default settings (1080pFill/Generic) and get an experience that is arguably at least 90% as good if you never want to deal with any of this.
 
@@ -290,7 +292,7 @@ SHA-256: `bdd9b16ed34056d3bc2054b7cc3565af2f19a044bce411e471259f3177f5116c`
 - Fixed screen tear bug in 480p -> 1080p (Under)
 - Fixed vertical hold (rolling screen) glitch for odd NTSC and PAL systems that uses non-standard sync lengths (mostly old home computers and PAL Atari Jaguar).
 
-<br/>
+<p style="margin:20px;"></p>
 
 Reminder: Both CRT effects and Smoothing filters look best in 'Generic' mode. Optionally set the pre-emphasis filter to -1 for a softer effect.
 
@@ -371,7 +373,7 @@ SHA-256: `4695f5f000ab5f51075a941bd93e42a821d3e37e236ffc19ae682ef9c612346f`
   - 1200p: 7x integer scale with optimal timing/autophase
   - 1440p: 8x integer scale with optimal sampling/autophase
 
-<br/>
+<p style="margin:20px;"></p>
 
 Grumpy disclaimer time! It's up to you to get GBI and 360p output from your Gamecube setup! We cannot provide support for the use of 3rd party equipment and there are simply too many variations for us to be able to keep up with. 
 
